Apache OpenNLP applied in Processor Processor tests adjusted Main class and method refactored